issue #88: Update methods in solicitations controller

--- a/SIGS/app/views/users/show.html.erb
+++ b/SIGS/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
 
       <div class="info-box-content">
         <span class="info-box-text">Solicitações Recebidas</span>
-        <span class="info-box-number"><%=@solicitation_count%></span>
+        <span class="info-box-number"><%= @solicitation_count.count %></span>
       </div>
       <!-- /.info-box-content -->
     </div>
