--- a/SIGS/app/views/solicitations/index.erb
+++ b/SIGS/app/views/solicitations/index.erb
@@ -16,8 +16,10 @@
     </tr>
     <% @solicitations.each do |solicitation| %>
       <% solicitation.room_solicitation.where(status: 0).group(:room_id).each do |room_solicitation| %>
-        <% room = room_solicitation.room %>
-        <% next unless @department_rooms.include? room %>
+        <%= room = room_solicitation.room %>
+        <% unless room.nil? %>
+          <% next unless @department_rooms.include? room %>
+        <% end %>
         <tr>
           <td><%= solicitation.request_date%></td>
           <td><%= solicitation.school_room.name%></td>
