--- a/SIGS/app/views/rooms/index.html.erb
+++ b/SIGS/app/views/rooms/index.html.erb
@@ -49,8 +49,8 @@
     <%= radio_button_tag(:room_status_filter, "all", true, :id => "id_all") %>
     <%= label_tag(:id_active, "Ativa") %>
     <%= radio_button_tag(:room_status_filter, "active", false, :id => "id_active") %>
-    <%= label_tag(:id_anactive, "Inativa") %>
-    <%= radio_button_tag(:room_status_filter, "inactive", false, :id => "id_anactive") %>
+    <%= label_tag(:id_inactive, "Inativa") %>
+    <%= radio_button_tag(:room_status_filter, "inactive", false, :id => "id_inactive") %>
   </p>
 
   <% if @rooms.count == 0 %>
