--- a/SIGS/app/views/school_rooms/index.html.erb
+++ b/SIGS/app/views/school_rooms/index.html.erb
@@ -48,11 +48,35 @@
         <td><%= school_room.vacancies %></td>
         <% if permission[:level] == 1 %>  
           </td>
-            <td style="text-align:center"><%= link_to image_tag("icon_alloc.png"), allocations_new_path(school_room.id) %></td>
-            <td style="text-align:center"><%= link_to image_tag("icon_request_alloc.png"), allocation_period_path(school_room.id) %></td>
-            <td style="text-align:center"><%= link_to image_tag("icon_alloc_red.png"), allocations_destroy_path(school_room.id) %></td>
-            <td style="text-align:center"><%= link_to image_tag("icon_edit.png"), school_rooms_edit_path(school_room.id) %></td>
-            <td style="text-align:center"><%= link_to image_tag("icon_trash.png"), destroy_school_room_path(school_room.id), data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} %></td>
+            <td style="text-align:center">
+              <% if !is_allocated? school_room.id %>
+                <%= link_to image_tag("icon_alloc.png"), allocations_new_path(school_room.id) %>
+              <% else %>
+                <%= image_tag("disabled.png") %>
+              <% end %>
+            </td>
+            <td style="text-align:center">
+              <% if !is_allocated? school_room.id %>
+                <%= link_to image_tag("icon_request_alloc.png"), allocation_period_path(school_room.id) %>
+              <% else %>
+                <%= image_tag("disabled.png") %>
+              <% end %>
+            </td>
+            <td style="text-align:center">
+              <% if is_allocated? school_room.id %>
+                <%= link_to image_tag("icon_alloc_red.png"), allocations_destroy_path(school_room.id) %>
+              <% else %>
+                <%= image_tag("disabled.png") %>
+              <% end %>
+            </td>
+            
+            <td style="text-align:center">
+              <%= link_to image_tag("icon_edit.png"), school_rooms_edit_path(school_room.id) %>
+            </td>
+            <td style="text-align:center">
+              <%= link_to image_tag("icon_trash.png"), destroy_school_room_path(school_room.id),
+                          data: {confirm: "Esta ação não poderá mais ser desfeita. Tem certeza que deseja continuar?"} %>
+            </td>
           </td>
         <% end %>
       </tr>
