--- a/SIGS/app/views/rooms/index.html.erb
+++ b/SIGS/app/views/rooms/index.html.erb
@@ -26,6 +26,10 @@
       <%= label_tag("Prédio") %>
       <%= select_tag 'building_id', options_for_select(@buildings.map{ |building| [building.name, building.id, { 'data-wing' => building.wing }] }), include_blank: true %>
     </td>
+    <td>
+      <%= label_tag("Departamento") %>
+      <%= select_tag 'department_id', options_for_select(@department.map{ |department| [department.name, department.id ]}), include_blank: true %>
+    </td>
   </tr>
 
   <tr>
