--- a/SIGS/app/views/rooms/index.html.erb
+++ b/SIGS/app/views/rooms/index.html.erb
@@ -28,8 +28,12 @@
     </td>
     <td>
       <%= label_tag("Departamento") %>
-      <%= select_tag 'department_id', options_for_select(@department.map{ |department| [department.name, department.id ]}, selected: @user_department.id), include_blank: true %>
-    </td>
+      <% if @user_department == nil%>
+        <%= select_tag 'department_id', options_for_select(@department.map{ |department| [department.name, department.id ]}), include_blank: true %>
+      <% else %>
+        <%= select_tag 'department_id', options_for_select(@department.map{ |department| [department.name, department.id ]}, selected: @user_department.id), include_blank: true %>
+      <% end %>
+      </td>
   </tr>
 
   <tr>
