updating font-awesome, setting new icons to school_rooms/index
Co-authored-by: Matheus Costa <matheus.bionicle@gmail.com>

--- a/SIGS/app/assets/stylesheets/school_rooms.scss
+++ b/SIGS/app/assets/stylesheets/school_rooms.scss
@@ -23,6 +23,34 @@
   background-color: #FFFFFF;
 }
 
+.allocate-plus {
+	color: #3F71A4;
+	font-size: 2em;
+}
+
+.already-allocate-plus {
+	color: #BDBDBD;
+	font-size: 2em;
+}
+
+.allocate-minus {
+	color: #d9534f;
+	font-size: 2em;
+}
+
+.not-allocated-minus {
+	color: #BDBDBD;
+	font-size: 2em;
+}
+.solicitation {
+	color: #76B856;
+	font-size: 2em;
+}
+
+.edit-allocation {
+	color: black;
+	font-size: 2em;
+}
 
 .search-input {
   padding: 5%;
