--- a/SIGS/app/assets/stylesheets/user.scss
+++ b/SIGS/app/assets/stylesheets/user.scss
@@ -53,6 +53,9 @@
     padding: 5px 10px;
     margin-left: 90px;
 }
+.info-box-icon-padding {
+  padding-right: 0px;
+}
 
 .info-box-text {
     display: block;
