--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -71,16 +71,41 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Relatórios <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Disciplinas", reports_by_discipline_path %></li>
-                  <li><%= link_to "Salas", reports_by_room_path %></li>
-                  <li><%= link_to "Turmas",reports_school_room_path%></li>
-                  <li><%= link_to "Prédios", reports_by_building_path %></li>
+                  <li>
+                    <%= link_to reports_by_discipline_path do %>
+                      <span class="fa fa-chalkboard-teacher"></span>Disciplinas
+                    <% end %>
+                  </li>
+                  <li>
+                    <%= link_to reports_by_room_path do %>
+                      <span class="fa fa-door-open"></span>Salas
+                    <% end %>
+                  </li>
+                  <li>
+                    <%= link_to reports_school_room_path do %>
+                      <span class="fa fa-users"></span>Turmas
+                    <% end %>
+                  </li>
+                  <li>
+                    <%= link_to reports_by_building_path do %>
+                      <span class="fa fa-building"></span>    Prédios
+                    <% end %>
+                  </li>
                 </ul>
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-right myNav">
-              <li><%= link_to "Minha Conta", user_edit_path(current_user) %></li>
-              <li><%= link_to 'Logout', sign_out_path, method: "delete" %></li>
+              <li>
+
+                <%= link_to user_edit_path(current_user) do %>
+                  <span class="fa fa-user"></span>Minha Conta
+                <% end %>
+              </li>
+              <li>
+                <%= link_to sign_out_path, method: "delete" do %>
+                  <span class="fa fa-sign-out-alt bla"></span>
+                <% end %>
+              </li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
