--- a/SIGS/app/views/users/show.html.erb
+++ b/SIGS/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <a href="/reports_school_rooms/school_room/">
   <div class="col-md-4 col-sm-6 col-xs-12">
     <div class="info-box">
-      <span class="info-box-icon bg-aqua"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></span>
+      <span class="info-box-icon bg-aqua"><i class="info-box-icon-padding fa fa-users" aria-hidden="true"></i></span>
 
       <div class="info-box-content">
         <span class="info-box-text">Total de Turmas</span>
@@ -16,7 +16,7 @@
   <a href="/reports_school_rooms/school_room/">
   <div class="col-md-4 col-sm-6 col-xs-12">
     <div class="info-box">
-      <span class="info-box-icon bg-red"><span class="glyphicon glyphicon-book" aria-hidden="true"></span></span>
+      <span class="info-box-icon bg-red"><i class="info-box-icon-padding fa fa-stream" aria-hidden="true"></i></span>
 
       <div class="info-box-content">
         <span class="info-box-text">Turmas Alocadas</span>
@@ -30,7 +30,7 @@
   <a href="/solicitations/index">
     <div class="col-md-4 col-sm-6 col-xs-12">
       <div class="info-box">
-        <span class="info-box-icon bg-yellow"><span class="glyphicon glyphicon-time" aria-hidden="true"></span></span>
+        <span class="info-box-icon bg-yellow"><span class="info-box-icon-padding fa fa-inbox" aria-hidden="true"></span></span>
         <div class="info-box-content">
           <span class="info-box-text">Solicitações Recebidas</span>
           <span class="info-box-number"><%= @solicitation_count.count %></span>
