--- a/SIGS/app/assets/stylesheets/reports_disciplines.scss
+++ b/SIGS/app/assets/stylesheets/reports_disciplines.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the Reports_Disciplines controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.pdf-icon {
+  font-size: 2em;
+  color: black;
+}
