--- a/SIGS/app/views/reports_disciplines/by_discipline.html.erb
+++ b/SIGS/app/views/reports_disciplines/by_discipline.html.erb
@@ -30,7 +30,10 @@
 	      <tr>
 	        <td><%= discipline.name %></td>
 	        <td><%= discipline.department.name %></td>
-					<td><%= link_to image_tag("icon_pdf.png"), generate_by_discipline_path(discipline.id), target: "_blank" %></td>
+					<td><%= link_to generate_by_discipline_path(discipline.id), target: "_blank" do %>
+								<i class="fa fa-file-pdf pdf-icon"></i>
+							<% end %>
+					</td>
 	      </tr>
 	    <% end %>
 		</tbody>
